[package]
name = "tile"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
futures = "0.3.4"
glsl-to-spirv = "0.1"
shaderc = "0.6.2"
bytemuck = "1.2.0"
nalgebra = "0.21.0"
failure = "0.1.8"
iced_winit = { git = "https://github.com/hecrj/iced" }
iced_wgpu = { git = "https://github.com/hecrj/iced" }
rand = "0.7.3"
perlin = "0.1.0"
noise = "0.6.0"
pretty_env_logger = "0.4.0"
