[package]
name = "hackstead_scene"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

[lib]
crate-type = [ "lib", "dylib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dyn = []

[dependencies]
hexa = { path = "../hexa" }
serde_json = "1.0.55"
serde = { version = "1.0.112", features = [ "derive" ] }
rand = "0.7.3"
noise = "0.6.0"
log = "0.4.8"
